@@ -1169,6 +1169,39 @@ void Player::DebugPrint(int x, int y, LPCSTR text, int stringLen, bool shadow)
     }
 }
 
+// bloody exclusive fullscreen hack: 
+// because B2S/VPM also accesses the frame buffer that is actually reserved for VP the gfx driver
+// seems to steal the frame buffer from VP but leaves the window focus on the VP player window
+// only a forced double alt+tab key press seems to reinitialize DX and shows the VP player again
+static int bringToTopWaitTime = 10000;
+void BringToTopThread(void *dummy)
+{
+   unsigned int startTime = GetTickCount();
+
+   while (1)
+   {
+      if (GetTickCount() - startTime > (unsigned int)bringToTopWaitTime)
+      {
+         // do alt+tab to switch to another process
+         keybd_event(VK_MENU, 0, 0, 0);
+         keybd_event(VK_TAB, 0, 0, 0);
+         keybd_event(VK_MENU, 0, KEYEVENTF_KEYUP, 0);
+         keybd_event(VK_TAB, 0, KEYEVENTF_KEYUP, 0);
+
+         Sleep(500);
+
+         // do another alt+tab to switch back to VP
+         keybd_event(VK_MENU, 0, 0, 0);
+         keybd_event(VK_TAB, 0, 0, 0);
+         keybd_event(VK_MENU, 0, KEYEVENTF_KEYUP, 0);
+         keybd_event(VK_TAB, 0, KEYEVENTF_KEYUP, 0);
+         break;
+      }
+      Sleep(500);
+   }
+   _endthread();
+}
+
 HRESULT Player::Init(PinTable * const ptable, const HWND hwndProgress, const HWND hwndProgressName)
 {
    TRACE_FUNCTION();
@@ -1528,6 +1561,17 @@ HRESULT Player::Init(PinTable * const ptable, const HWND hwndProgress, const HWN
    assert(m_ballTrailVertexBuffer == NULL);
    m_pin3d.m_pd3dDevice->CreateVertexBuffer((MAX_BALL_TRAIL_POS-2)*2+4, USAGE_DYNAMIC, MY_D3DFVF_NOTEX2_VERTEX, &m_ballTrailVertexBuffer);
 
+
+   if (m_fFullScreen)
+   {
+      //#### start task switcher for exclusive FS mode ###
+      hr = GetRegInt("Player", "FsWaitTime", &bringToTopWaitTime);
+      if (hr != S_OK)
+         bringToTopWaitTime = 0;
+
+      if (bringToTopWaitTime > 0)
+         _beginthread(BringToTopThread, 0, NULL);
+   }
    m_ptable->m_pcv->Start(); // Hook up to events and start cranking script
 
    SetWindowText(hwndProgressName, "Starting Game Scripts...");
